--- a/src/app/messages/messages-list/messages-list.component.html
+++ b/src/app/messages/messages-list/messages-list.component.html
@@ -1,10 +1,10 @@
 <ul>
-  <!-- @for (message of messages(); track message) {
-    <li>{{ message }}</li>
-  } -->
-  @for (message of messages; track message) {
+  @for (message of messages(); track message) {
     <li>{{ message }}</li>
   }
+  <!-- @for (message of messages$ | async; track message) {
+    <li>{{ message }}</li>
+  } -->
 </ul>
 
 <p class="debug-output">{{ debugOutput }}</p>
